Fix nax on small screen

--- a/app/stylus/sections/nav.styl
+++ b/app/stylus/sections/nav.styl
@@ -85,6 +85,7 @@
       position: absolute
       top: 100%
       left: 0
+      margin-top: 0px
 
       a
         margin-left: 0
